# Android-OpenSLES-Demo

./: .gitignore  Dev.MD
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/dev/mars/openslesdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_lib.cpp  log.h  native-lib.cpp  opensl_io.c  opensl_io.h  opensl_lib.cpp
app/src/main/java/dev/mars/openslesdemo/: AudioUtils.java  Common.java  FFMpegNative.java  FFMpegUtils.java  LOG.java  LogUtils.java  MainActivity.java  NativeBridge.java  NativeLib.java  OpenSLNative.java  OpenSLPlayer.java  OpenSLRecorder.java  SpeexUtils.java
app/src/main/java/dev/mars/openslesdemo/base/: BaseApplication.java
app/src/main/jni/: CMakeLists.txt  native.cpp  opensl_io.c  opensl_io.h
app/src/main/jnilibs/speex_include/: speexdsp_config_types.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/dev/mars/openslesdemo/: ExampleUnitTest.java
